update Add Task Fragment

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -23,6 +23,7 @@
         app:fabSize="normal"
         android:contentDescription="@string/todo"
         android:layout_marginVertical="10dp"
+        app:shapeAppearanceOverlay="@style/circle_button"
         app:borderWidth="10dp" />
 
 
