--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -24,13 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-
         android:background="@android:color/transparent"
         android:hint="@string/go_to_sleep"
         android:inputType="textCapSentences"
         android:maxLines="1"
         android:paddingHorizontal="10dp"
         android:paddingVertical="16dp"
+        android:textColor="@color/white"
         android:textColorHint="#ACA9A9"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -46,6 +46,7 @@
         android:maxLines="2"
         android:paddingHorizontal="8dp"
         android:paddingVertical="16dp"
+        android:textColor="@color/white"
         android:textColorHint="#ACA9A9"
         android:textSize="16sp" />
 
@@ -55,6 +56,7 @@
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_set_time"
             android:layout_width="wrap_content"
@@ -78,6 +80,7 @@
             android:layout_marginEnd="200dp"
             android:background="@drawable/btn_icon"
             android:src="@drawable/ic_flag" />
+
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_send"
             android:layout_width="wrap_content"
