--- a/app/src/main/res/drawable/bottom_dialog_background.xml
+++ b/app/src/main/res/drawable/bottom_dialog_background.xml
@@ -2,7 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
         android:color="#363636"/>
-    <corners android:radius="5dp"/>
+    <corners
+        android:topLeftRadius="24dp"
+        android:topRightRadius="24dp"/>
     <padding
         android:left="10dp"
         android:right="10dp"
