--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#363636</color>
     <color name="light_purple">#8687E7</color>
+    <color name="defaultColor">#272727</color> <!-- Màu nền mặc định -->
 </resources>
