--- a/app/src/main/res/layout/fragment_category_picker.xml
+++ b/app/src/main/res/layout/fragment_category_picker.xml
@@ -3,28 +3,30 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/dialog_background"
-    tools:context=".dialogfragment.PriorityPickerFragment">
+    tools:context=".dialogfragment.CategoryPickerFragment">
 
     <TextView
         android:id="@+id/priority_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/task_priority"
+        android:text="@string/choose_category"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_marginTop="5dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/line"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,49 +35,29 @@
         app:layout_constraintVertical_bias="0" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:padding="5dp"
-        android:id="@+id/priority_recyclerview"
+        android:id="@+id/category_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingVertical="10dp"
+        app:layout_constraintBottom_toTopOf="@id/add_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/line"
-        app:layout_constraintVertical_bias="0"
-        tools:listitem="@layout/item_priority" />
+        app:layout_constraintVertical_bias="0" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/save_btn"
-        android:layout_width="0dp"
+        android:id="@+id/add_btn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="20dp"
         android:background="@drawable/background_btn"
-        android:text="@string/save"
+        android:text="@string/add_category"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priority_recyclerview"
-        app:layout_constraintWidth_percent="0.5" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cancel_btn"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="5dp"
-        android:background="@drawable/transparent_icon"
-        android:text="@string/cancel"
-        android:textAllCaps="false"
-        android:textColor="@color/light_purple"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/priority_recyclerview"
-        app:layout_constraintWidth_percent="0.5" />
+        android:textSize="16sp"
+        android:textStyle="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
