--- a/app/src/main/res/layout/item_priority.xml
+++ b/app/src/main/res/layout/item_priority.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:paddingTop="5dp"
+    >
 
     <TextView
         android:id="@+id/priority_item"
