--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,5 +18,9 @@
         android:name="com.proptit.todoapp.ui.TaskDetailFragment"
         android:label="AddTaskFragment"
         tools:layout="@layout/fragment_task_detail"
-        />
+        >
+        <argument
+            android:name="taskId"
+            app:argType="long" />
+    </fragment>
 </navigation>
