--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -18,7 +18,14 @@
     <style name="CustomBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@android:color/transparent</item>
     </style>
-
+    <style name="editTextBody2">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="CustomCheckBox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="android:button">@drawable/checkbox_selector</item>
+        <item name="android:background">@android:color/transparent</item>
+    </style>
     <style name="rippleStyle">
         <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
