--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,6 @@
     <color name="light_sea_blue">#20B2AA</color>
     <color name="light_green">#90EE90</color>
     <color name="light_yellow">#FFFFE0</color>
+    <color name="red_active">#f44336</color>
 
 </resources>
