--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="light_green">#90EE90</color>
     <color name="light_yellow">#FFFFE0</color>
     <color name="red_active">#f44336</color>
+    <color name="teal">#0E1F7C</color>
 
 </resources>
