--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +9,8 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_above="@+id/bottom_navigation_view_linear"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_view_linear"
-        />
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation_view_linear" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
@@ -21,16 +18,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginVertical="10dp"
-        android:contentDescription="@string/todo"
         android:src="@drawable/ic_add"
         app:backgroundTint="@color/light_purple"
-        app:borderWidth="10dp"
         app:fabSize="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:shapeAppearanceOverlay="@style/circle_button" />
+        android:contentDescription="@string/todo"
+        android:layout_marginVertical="10dp"
+        app:shapeAppearanceOverlay="@style/circle_button"
+        app:borderWidth="10dp" />
 
 
     <me.ibrahimsn.lib.SmoothBottomBar
@@ -40,8 +34,7 @@
         android:layout_alignParentBottom="true"
         app:backgroundColor="@color/gray"
         app:iconTintActive="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/item_bottom_bar" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
