--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -175,7 +175,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_day_progress"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
